<resources>
    <string name="app_name">Konversi Mata Uang</string>
    <string name="cost_of_service">Nilai Mata Uang</string>
    <string name="how_was_the_service">Pilih Mata Uang?</string>
    <string name="euro">Euro</string>
    <string name="dollar">US Dollar</string>
    <string name="yen">Japanese Yen</string>
    <string name="riyal">Saudi Riyal</string>
    <string name="konversi">Konversi</string>
    <string name="tip_amount">Nilai Rupiah: %s </string>
</resources>